Refactor WebAppLoader for improved lifecycle management